# command-agent

./: .gitignore  .thumbnail  Command Runner.dc.html  README.md  build.mjs  package.json  styles.css
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
