[package]
name = "command-agent"
version = "1.0.0"
description = "Command Runner — Windows console & automation"
authors = []
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = ["shell-open"] }
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time", "net"] }
russh = "0.62"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
